# Upplysning

./: Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs  main.rs
src/engine/: mod.rs  workflowengine.rs
src/model/: feedbackcondition.rs  feedbackloop.rs  instancestatus.rs  mod.rs  step.rs  stepresult.rs  stepstatus.rs  tasktype.rs  thresholdoperator.rs  worker.rs  workertask.rs  workflow.rs  workflowinstance.rs
src/scheduler/: scheduler.rs
src/storage/: mod.rs  workflowstorage.rs
src/webserver/: webserver.rs
src/worker/: worker.rs
