[package]
name = "Upplysning"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = { version="0.7.4",features=["macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace"] }

# Async runtime
tokio = { version = "1.35.1", features = ["full", "macros"] }

# Distributed coordination
paxos-rust = "0.2.0"
sled = "0.34.7"  # Persistent storage

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Task distribution
lapin = "2.3.1"  # RabbitMQ client
uuid = { version = "1.6.1", features = ["v4", "serde"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Machine Learning utilities
ndarray = "0.15.6"
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1.88"